fixed jumbotron background image spacing. Still unable to conquer responsive text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     width:100%;
     margin-right: 0px;
     padding-right: 0px;
+    --bs-gutter-x:none;
 }
 .jumbotron {
     display: flex;
@@ -16,12 +17,7 @@
     height: 450px;
     background-size: cover;
     background-position-y: center;
-    /* width:100%; */
-    /* margin:0px; */
 }
-/* .text-left{
-    text-align: left!important;
-} */
 .title{
     font-size: 2rem;
     color:white;
@@ -37,8 +33,8 @@
     color: white;
     font-size: 4rem;
     text-shadow: 0px 0px 10px black;
-    text-transform: inherit;
-    width: 70%;
+    /* text-transform: inherit; */
+    /* width: 70%; */
     padding-left: 30px;
 }
 p1{
